# RAG_LLMOps

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.lock.txt  requirements.txt
.github/workflows/: ci.yml
airflow/: docker-compose.airflow.yml  requirements.airflow.txt
airflow/dags/: build_chroma_index_dag.py  ingest_market_data_dag.py  ingest_news_dag.py
docker/: Dockerfile.airflow  Dockerfile.api
notebooks/: rag_2.ipynb
scripts/: build_artifacts.py
src/agent/: graph.py  prompts.py  state.py
src/api/: app.py  routes.py  schemas.py
src/cli/: run_query.py
src/config/: logging.py  settings.py
src/data_access/: finnhub_store.py  market_store.py  news_store.py  snapshot_manager.py
src/embeddings/: company_cards.py  embedder.py
src/evaluation/: offline_eval.py
src/ingestion/: fundamentals.py  market_data.py  news.py
src/pipelines/: chroma_index.py  market_snapshot.py  news_snapshot.py
src/retrieval/: retrieve_companies.py
src/tools/: fetch_finnhub.py  fetch_fundamentals.py  fetch_market_bundle.py  fetch_news.py  fetch_prices.py  retrieve_context.py
src/utils/: cache.py  helpers.py  s3.py
src/vectorstore/: chroma_store.py
tests/: test_ask_basic.py  test_ask_validation.py  test_env.py  test_health.py  test_imports.py
